...
        itemCount: Get.find<info_controller>().list.length,
        itemBuilder: (BuildContext, index) {
          return Stack(
            alignment: Alignment.centerRight,
            children: [
              ListTile(
                key: const Key('list item'),
                onLongPress: () {
                  Get.find<info_feild_controller>().firstname.text =
                      Get.find<info_controller>().list[index].firstname ?? '';
                  Get.find<info_feild_controller>().lastname.text =
                      Get.find<info_controller>().list[index].lastname ?? '';
                  Get.find<info_feild_controller>().birthday.text =
...
